--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -13,5 +13,15 @@ Pos=60,60
 Size=291,363
 Collapsed=0
 
+[Window][Editor]
+Pos=60,60
+Size=218,161
+Collapsed=0
+
+[Window][Menu]
+Pos=60,60
+Size=334,354
+Collapsed=0
+
 [Docking][Data]
 
