--- a/myEngine/myEngine.vcxproj.filters
+++ b/myEngine/myEngine.vcxproj.filters
@@ -464,6 +464,9 @@
     <ClInclude Include="src\Module\ModuleTexture.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="src\Globals.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="files\default.fs" />
