Adding Editor functionalities: Menu, Scene Object Inspector (WIP) & minor changes

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=440,160
-Size=400,400
+Pos=338,133
+Size=660,481
 Collapsed=0
 
 [Window][Another Window]
@@ -19,9 +19,44 @@ Size=218,161
 Collapsed=0
 
 [Window][Menu]
-Pos=182,196
-Size=421,432
+Pos=980,0
+Size=300,720
 Collapsed=0
 
+[Window][  Top Right]
+Pos=913,357
+Size=159,257
+Collapsed=0
+
+[Window][  Bot Right]
+Pos=487,419
+Size=159,461
+Collapsed=0
+
+[Window][Inspector]
+Pos=8,99
+Size=321,720
+Collapsed=0
+
+[Window][Docking]
+Pos=864,196
+Size=237,427
+Collapsed=0
+
+[Window][Debug Tools]
+Pos=723,366
+Size=429,348
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Configuration]
+Pos=723,27
+Size=429,337
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
+DockNode    ID=0x00000002 Pos=723,27 Size=429,687 Split=Y
+  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=429,146 SelectedTab=0x169CEE22
+  DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=429,151 SelectedTab=0x08595350
 
