--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,8 +34,8 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=8,99
-Size=321,720
+Pos=1,34
+Size=211,487
 Collapsed=0
 
 [Window][Docking]
@@ -44,19 +44,24 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=723,366
-Size=429,348
+Pos=1011,367
+Size=262,348
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Configuration]
-Pos=723,27
-Size=429,337
+Pos=1011,28
+Size=262,337
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Console]
+Pos=10,558
+Size=995,148
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000002 Pos=723,27 Size=429,687 Split=Y
+DockNode    ID=0x00000002 Pos=1011,28 Size=262,687 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=429,146 SelectedTab=0x169CEE22
   DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=429,151 SelectedTab=0x08595350
 
