--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][Inspector]
 Pos=1,34
-Size=211,487
+Size=238,487
 Collapsed=0
 
 [Window][Docking]
@@ -44,16 +44,16 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=1011,367
-Size=262,348
+Pos=1011,28
+Size=262,687
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,1
 
 [Window][Configuration]
 Pos=1011,28
-Size=262,337
+Size=262,687
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][Console]
 Pos=10,558
@@ -61,7 +61,5 @@ Size=995,148
 Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000002 Pos=1011,28 Size=262,687 Split=Y
-  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=429,146 SelectedTab=0x169CEE22
-  DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=429,151 SelectedTab=0x08595350
+DockNode  ID=0x00000002 Pos=1011,28 Size=262,687 SelectedTab=0x08595350
 
