--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,7 +34,7 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=1,34
+Pos=1,35
 Size=238,487
 Collapsed=0
 
@@ -56,10 +56,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Console]
-Pos=10,558
-Size=995,148
+Pos=10,565
+Size=1006,154
 Collapsed=0
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=1011,28 Size=262,687 SelectedTab=0x08595350
+DockNode  ID=0x00000002 Pos=1011,28 Size=262,687 SelectedTab=0x169CEE22
 
