--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,9 +34,10 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=1,36
-Size=291,487
+Pos=1,19
+Size=324,752
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Docking]
 Pos=864,196
@@ -44,22 +45,43 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=1124,28
-Size=149,687
+Pos=1629,19
+Size=286,752
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000006,1
 
 [Window][Configuration]
-Pos=1124,28
-Size=149,687
+Pos=1629,19
+Size=286,752
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000006,0
 
 [Window][Console]
-Pos=-12,570
-Size=1154,145
+Pos=1,773
+Size=1914,242
 Collapsed=0
+DockId=0x00000007,0
+
+[Window][scene]
+Pos=1,19
+Size=1191,661
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Scene]
+Pos=327,19
+Size=1300,752
+Collapsed=0
+DockId=0x00000009,0
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=1124,28 Size=149,687 SelectedTab=0x169CEE22
+DockNode          ID=0x00000001 Pos=1,19 Size=1914,996 Split=Y
+  DockNode        ID=0x00000002 Parent=0x00000001 SizeRef=897,525 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=1071,550 Split=X SelectedTab=0xD979EFDA
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=805,525 SelectedTab=0xD979EFDA
+      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=264,525 Split=X SelectedTab=0xF02CD328
+        DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=316,661 SelectedTab=0xF02CD328
+        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=1266,661 SelectedTab=0x18B8C0DE
+    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=188,550 SelectedTab=0x169CEE22
+  DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=897,169 SelectedTab=0xF9BEF62A
 
