--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -44,14 +44,14 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=1124,28
-Size=149,687
+Pos=974,28
+Size=299,687
 Collapsed=0
 DockId=0x00000002,1
 
 [Window][Configuration]
-Pos=1124,28
-Size=149,687
+Pos=974,28
+Size=299,687
 Collapsed=0
 DockId=0x00000002,0
 
@@ -61,5 +61,5 @@ Size=1154,145
 Collapsed=0
 
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=1124,28 Size=149,687 SelectedTab=0x169CEE22
+DockNode  ID=0x00000002 Pos=974,28 Size=299,687 SelectedTab=0x08595350
 
