Decoupling editor panels to separate structs & refactoring framebuffers, render buffers & texture2D into separate classes

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,8 +34,8 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=1,19
-Size=324,752
+Pos=-4,30
+Size=212,544
 Collapsed=0
 DockId=0x00000008,0
 
@@ -45,20 +45,20 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=1629,19
-Size=286,752
+Pos=996,30
+Size=253,544
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Configuration]
-Pos=1629,19
-Size=286,752
+Pos=996,30
+Size=253,544
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Console]
-Pos=1,773
-Size=1914,242
+Pos=-4,576
+Size=1253,175
 Collapsed=0
 DockId=0x00000007,0
 
@@ -69,19 +69,19 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene]
-Pos=327,19
-Size=1300,752
+Pos=210,30
+Size=784,544
 Collapsed=0
 DockId=0x00000009,0
 
 [Docking][Data]
-DockNode          ID=0x00000001 Pos=1,19 Size=1914,996 Split=Y
+DockNode          ID=0x00000001 Pos=-4,30 Size=1253,721 Split=Y
   DockNode        ID=0x00000002 Parent=0x00000001 SizeRef=897,525 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=1071,550 Split=X SelectedTab=0xD979EFDA
+    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=998,550 Split=X SelectedTab=0xD979EFDA
       DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=805,525 SelectedTab=0xD979EFDA
       DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=264,525 Split=X SelectedTab=0xF02CD328
-        DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=316,661 SelectedTab=0xF02CD328
-        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=1266,661 SelectedTab=0x18B8C0DE
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=188,550 SelectedTab=0x169CEE22
+        DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=212,661 SelectedTab=0xF02CD328
+        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=784,661 SelectedTab=0x18B8C0DE
+    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=253,550 SelectedTab=0x08595350
   DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=897,169 SelectedTab=0xF9BEF62A
 
