Solved an issue when rendering to texture

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=338,133
+Pos=380,221
 Size=660,481
 Collapsed=0
 
@@ -34,10 +34,10 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=24,71
-Size=32,371
+Pos=950,0
+Size=330,598
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000003,2
 
 [Window][Docking]
 Pos=864,196
@@ -45,43 +45,53 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=168,71
-Size=36,371
+Pos=950,0
+Size=330,598
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000003,1
 
 [Window][Configuration]
-Pos=168,71
-Size=36,371
+Pos=950,0
+Size=330,598
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000003,0
 
 [Window][Console]
-Pos=24,444
-Size=180,120
+Pos=0,600
+Size=1280,120
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000005,0
 
 [Window][scene]
 Pos=1,19
 Size=1191,661
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Scene]
-Pos=58,71
-Size=108,371
+Pos=0,0
+Size=948,598
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000002,0
+
+[Window][EditorWindow]
+Pos=0,20
+Size=1280,700
+Collapsed=0
+
+[Window][DockspaceViewport_11111111]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Main]
+Pos=30,49
+Size=618,367
+Collapsed=0
 
 [Docking][Data]
-DockNode          ID=0x00000001 Pos=24,71 Size=180,493 Split=Y
-  DockNode        ID=0x00000002 Parent=0x00000001 SizeRef=897,525 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=998,550 Split=X SelectedTab=0xD979EFDA
-      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=805,525 SelectedTab=0xD979EFDA
-      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=264,525 Split=X SelectedTab=0xF02CD328
-        DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=212,661 SelectedTab=0xF02CD328
-        DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=784,661 SelectedTab=0x18B8C0DE
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=253,550 SelectedTab=0x08595350
-  DockNode        ID=0x00000007 Parent=0x00000001 SizeRef=897,169 SelectedTab=0xF9BEF62A
+DockSpace     ID=0x4DDED0D8 Pos=0,0 Size=1280,720 Split=Y CentralNode=1
+  DockNode    ID=0x00000004 Parent=0x4DDED0D8 SizeRef=1266,483 Split=X
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=938,621 SelectedTab=0x18B8C0DE
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=326,621 SelectedTab=0xF02CD328
+  DockNode    ID=0x00000005 Parent=0x4DDED0D8 SizeRef=1266,97 SelectedTab=0xF9BEF62A
 
