Set up a background docking node. Editor camera movement with mouse only works when mouse hovers scene panel.

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,10 +34,10 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=950,0
-Size=330,598
+Pos=950,19
+Size=330,576
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x00000005,0
 
 [Window][Docking]
 Pos=864,196
@@ -45,22 +45,22 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=950,0
-Size=330,598
+Pos=950,19
+Size=330,576
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000005,2
 
 [Window][Configuration]
-Pos=950,0
-Size=330,598
+Pos=950,19
+Size=330,576
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,1
 
 [Window][Console]
-Pos=0,600
-Size=1280,120
+Pos=0,597
+Size=1280,123
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][scene]
 Pos=1,19
@@ -68,10 +68,10 @@ Size=1191,661
 Collapsed=0
 
 [Window][Scene]
-Pos=0,0
-Size=948,598
+Pos=0,19
+Size=948,576
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][EditorWindow]
 Pos=0,20
@@ -79,7 +79,6 @@ Size=1280,700
 Collapsed=0
 
 [Window][DockspaceViewport_11111111]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -88,10 +87,15 @@ Pos=30,49
 Size=618,367
 Collapsed=0
 
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x4DDED0D8 Pos=0,0 Size=1280,720 Split=Y CentralNode=1
-  DockNode    ID=0x00000004 Parent=0x4DDED0D8 SizeRef=1266,483 Split=X
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=938,621 SelectedTab=0x18B8C0DE
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=326,621 SelectedTab=0xF02CD328
-  DockNode    ID=0x00000005 Parent=0x4DDED0D8 SizeRef=1266,97 SelectedTab=0xF9BEF62A
+DockSpace     ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
+  DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,564 Split=X
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=948,686 CentralNode=1 SelectedTab=0x18B8C0DE
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=330,686 SelectedTab=0x169CEE22
+  DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,120 SelectedTab=0xF9BEF62A
 
