Model Loader & Mesh Renderer compute bounding box properties. Mouse movement of Editor cam only happens when hovering the image.

--- a/myEngine/files/x86/imgui.ini
+++ b/myEngine/files/x86/imgui.ini
@@ -34,8 +34,8 @@ Size=159,461
 Collapsed=0
 
 [Window][Inspector]
-Pos=950,19
-Size=330,576
+Pos=711,19
+Size=569,576
 Collapsed=0
 DockId=0x00000005,0
 
@@ -45,14 +45,14 @@ Size=237,427
 Collapsed=0
 
 [Window][Debug Tools]
-Pos=950,19
-Size=330,576
+Pos=711,19
+Size=569,576
 Collapsed=0
 DockId=0x00000005,2
 
 [Window][Configuration]
-Pos=950,19
-Size=330,576
+Pos=711,19
+Size=569,576
 Collapsed=0
 DockId=0x00000005,1
 
@@ -69,7 +69,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,19
-Size=948,576
+Size=709,576
 Collapsed=0
 DockId=0x00000004,0
 
@@ -95,7 +95,7 @@ Collapsed=0
 [Docking][Data]
 DockSpace     ID=0xFA06BC56 Pos=0,19 Size=1280,701 Split=Y
   DockNode    ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,564 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=948,686 CentralNode=1 SelectedTab=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=330,686 SelectedTab=0x169CEE22
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=709,686 CentralNode=1 SelectedTab=0x18B8C0DE
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=569,686 SelectedTab=0xF02CD328
   DockNode    ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,120 SelectedTab=0xF9BEF62A
 
